--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,30 @@
+
+
 body {
   background-color: #eff0f2;
   font-size: 20px;
+  margin: 0px;
+  padding: 0px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow-x: hidden;
 }
 
 .heading{
-  width: 50%;
-  margin: 30px auto;
+  margin: 0;
+  padding: 5px;
+  width: 100%;
+  position: absolute;
+  top: 0;
   text-align: center;
-  color: #6B8E23;
+  color: rgb(50, 51, 48);
   background: #FFF8DC;
-  border-radius: 20px;
+}
+
+#content {
+  position: relative;
+  top: 100px;
 }
 
 form {
@@ -18,7 +33,7 @@ form {
   border-radius: 5px;
   padding: 10px;
   background: #FFF8DC;
-  border: 1px solid #6B8E23;
+  border: 1px solid  rgb(40, 41, 109);
 }
 
 form p {
@@ -31,20 +46,22 @@ form p {
   width: 73%;
   height: 15px;
   padding: 10px;
-  border: 2px solid #6B8E23;
+  border: 2px solid  rgb(40, 41, 109);
 }
 
 .task_btn {
   height: 39px;
   background: #FFF8DC;
-  color: #6B8E23;
-  border: 2px solid #6B8E23;
+  color:  rgb(40, 41, 109);
+  border: 2px solid  rgb(40, 41, 109);
   border-radius: 5px;
   padding: 5px 20px;
   cursor: pointer;
 }
 
 table {
+  position: relative;
+  top: 100px;
   width: 50%;
   margin: 30px auto;
   border-collapse: collapse;
@@ -56,7 +73,9 @@ tr {
 
 th {
   font-size: 19px;
-  color: #6B8E23;
+  color:  rgb(40, 41, 109);
+  text-transform: capitalize;
+  padding: 5px 0;
 }
 
 th, td {
@@ -79,8 +98,27 @@ tr:hover {
 
 .delete a {
   color: white;
-  background: #a52a2a;
-  padding: 1px 6px;
-  border-radius: 3px;
+  background: #e90808;
+  padding: 5px 10px;
+  border-radius: 50%;
   text-decoration: none;
+  cursor: pointer;
+}
+
+.delete a:hover {
+  background: #f15858;
+}
+
+
+#footer {
+  position: fixed;
+  width: 100vw;
+  height: 150px;
+  background-color: rgb(40, 41, 109);
+  color: #fff;
+  bottom: 0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  vertical-align: center;
 }
